crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__dialog-100-dark-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind the dialog: what it covers dims                                                              |
|behind the dialog: what it covers dims                                                              |
|behind the dialog: w  go to                                                esc                      |
|behind the dialog: w                                                                                |
|behind the dialog: w   the body                                                                     |
|behind the dialog: w   goes here                                                                    |
|behind the dialog: w                                                                                |
|behind the dialog: w   enter open  esc close                                                        |
|behind the dialog: w                                                                                |
|behind the dialog: w                                                                                |
|behind the dialog: what it covers dims                                                              |
|behind the dialog: what it covers dims                                                              |

 0   0..100 fg=#7f8492 bg=#111216
 1   0..100 fg=#7f8492 bg=#111216
 2   0..20  fg=#7f8492 bg=#111216
 2  20..21  fg=#e6e6e6 bg=#181a20
 2  21..22  fg=#7f8492 bg=#181a20
 2  22..27  fg=#e6e6e6 bg=#181a20 BOLD
 2  27..79  fg=#7f8492 bg=#181a20
 2  79..80  fg=#e6e6e6 bg=#181a20
 2  80..100 fg=#7f8492 bg=#111216
 3   0..20  fg=#7f8492 bg=#111216
 3  20..80  fg=#e6e6e6 bg=#181a20
 3  80..100 fg=#7f8492 bg=#111216
 4   0..20  fg=#7f8492 bg=#111216
 4  20..80  fg=#e6e6e6 bg=#181a20
 4  80..100 fg=#7f8492 bg=#111216
 5   0..20  fg=#7f8492 bg=#111216
 5  20..80  fg=#e6e6e6 bg=#181a20
 5  80..100 fg=#7f8492 bg=#111216
 6   0..20  fg=#7f8492 bg=#111216
 6  20..80  fg=#e6e6e6 bg=#181a20
 6  80..100 fg=#7f8492 bg=#111216
 7   0..20  fg=#7f8492 bg=#111216
 7  20..23  fg=#e6e6e6 bg=#181a20
 7  23..28  fg=#e6e6e6 bg=#181a20 BOLD
 7  28..33  fg=#7f8492 bg=#181a20
 7  33..35  fg=#e6e6e6 bg=#181a20
 7  35..38  fg=#e6e6e6 bg=#181a20 BOLD
 7  38..44  fg=#7f8492 bg=#181a20
 7  44..80  fg=#e6e6e6 bg=#181a20
 7  80..100 fg=#7f8492 bg=#111216
 8   0..20  fg=#7f8492 bg=#111216
 8  20..80  fg=#e6e6e6 bg=#181a20
 8  80..100 fg=#7f8492 bg=#111216
 9   0..20  fg=#7f8492 bg=#111216
 9  20..80  fg=#e6e6e6 bg=#181a20
 9  80..100 fg=#7f8492 bg=#111216
10   0..100 fg=#7f8492 bg=#111216
11   0..100 fg=#7f8492 bg=#111216
