crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__dialog-45-dark-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind the dialog: what it covers dims       |
|behind the dialog: what it covers dims       |
|  go to                                 esc  |
|                                             |
|   the body                                  |
|   goes here                                 |
|                                             |
|   enter open  esc close                     |
|                                             |
|                                             |
|behind the dialog: what it covers dims       |
|behind the dialog: what it covers dims       |

 0   0..45  fg=#7f8492 bg=#111216
 1   0..45  fg=#7f8492 bg=#111216
 2   0..1   fg=#e6e6e6 bg=#181a20
 2   1..2   fg=#7f8492 bg=#181a20
 2   2..7   fg=#e6e6e6 bg=#181a20 BOLD
 2   7..44  fg=#7f8492 bg=#181a20
 2  44..45  fg=#e6e6e6 bg=#181a20
 3   0..45  fg=#e6e6e6 bg=#181a20
 4   0..45  fg=#e6e6e6 bg=#181a20
 5   0..45  fg=#e6e6e6 bg=#181a20
 6   0..45  fg=#e6e6e6 bg=#181a20
 7   0..3   fg=#e6e6e6 bg=#181a20
 7   3..8   fg=#e6e6e6 bg=#181a20 BOLD
 7   8..13  fg=#7f8492 bg=#181a20
 7  13..15  fg=#e6e6e6 bg=#181a20
 7  15..18  fg=#e6e6e6 bg=#181a20 BOLD
 7  18..24  fg=#7f8492 bg=#181a20
 7  24..45  fg=#e6e6e6 bg=#181a20
 8   0..45  fg=#e6e6e6 bg=#181a20
 9   0..45  fg=#e6e6e6 bg=#181a20
10   0..45  fg=#7f8492 bg=#111216
11   0..45  fg=#7f8492 bg=#111216
