crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__dialog-45-light-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|behind the dialog: what it covers dims       |
|behind the dialog: what it covers dims       |
|  go to                                 esc  |
|                                             |
|   the body                                  |
|   goes here                                 |
|                                             |
|   enter open  esc close                     |
|                                             |
|                                             |
|behind the dialog: what it covers dims       |
|behind the dialog: what it covers dims       |

 0   0..45  fg=#6b6f7a bg=#ffffff
 1   0..45  fg=#6b6f7a bg=#ffffff
 2   0..1   fg=#1c1c1c bg=#f6f7f9
 2   1..2   fg=#6b6f7a bg=#f6f7f9
 2   2..7   fg=#1c1c1c bg=#f6f7f9 BOLD
 2   7..44  fg=#6b6f7a bg=#f6f7f9
 2  44..45  fg=#1c1c1c bg=#f6f7f9
 3   0..45  fg=#1c1c1c bg=#f6f7f9
 4   0..45  fg=#1c1c1c bg=#f6f7f9
 5   0..45  fg=#1c1c1c bg=#f6f7f9
 6   0..45  fg=#1c1c1c bg=#f6f7f9
 7   0..3   fg=#1c1c1c bg=#f6f7f9
 7   3..8   fg=#1c1c1c bg=#f6f7f9 BOLD
 7   8..13  fg=#6b6f7a bg=#f6f7f9
 7  13..15  fg=#1c1c1c bg=#f6f7f9
 7  15..18  fg=#1c1c1c bg=#f6f7f9 BOLD
 7  18..24  fg=#6b6f7a bg=#f6f7f9
 7  24..45  fg=#1c1c1c bg=#f6f7f9
 8   0..45  fg=#1c1c1c bg=#f6f7f9
 9   0..45  fg=#1c1c1c bg=#f6f7f9
10   0..45  fg=#6b6f7a bg=#ffffff
11   0..45  fg=#6b6f7a bg=#ffffff
