crates/herder-tui/src/ui/snapshots/herder_tui__ui__snapshot__field-light-ascii.snap
---
source: crates/herder-tui/src/ui/snapshot.rs
expression: dump(&buffer)
---
|search    docs                               |
|                                             |
|model     opus                               |

 0   0..6   fg=#2f5bb7 bg=#ffffff BOLD
 0   6..9   fg=#1c1c1c bg=#ffffff
 0   9..10  fg=#1c1c1c bg=#eceef2
 0  10..11  fg=#1c1c1c bg=#eceef2 REVERSED
 0  11..45  fg=#1c1c1c bg=#eceef2
 1   0..45  fg=#1c1c1c bg=#ffffff
 2   0..5   fg=#6b6f7a bg=#ffffff
 2   5..45  fg=#1c1c1c bg=#ffffff
